# manthan-mvp

./: .env.example  .gitignore  .replit  ASYNC_INGESTION.md  CLAUDE.md  CONTEXT.md  DEPLOYMENT_CONFIG.md  MONITORING.md  VERCEL_DEBUG.md  database-setup.sql  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  package.json.tmp  playwright.config.ts  replit.md  requirements.txt  tailwind.config.ts  test-monitoring.js  tsconfig.json  vercel.json
__tests__/: IndiaProjectFields.test.tsx  test-utils.ts
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
attached_assets/: Manthan - Pipeline FIx (Claude)_1757959421448.docx  Pasted-Title-Fix-UX-flows-and-ingestion-for-Manthan-OS-MVP-Next-js-Supabase-Context-Stack-assume-1757994279296_1757994279297.txt  content-1757992186923.md
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/routers/: ingestion.py  recommendations.py
backend/app/services/: pipeline.py  visual_assets.py
backend/app/services/llm/: providers.py
backend/tests/: test_pipeline.py
components/: Breadcrumbs.tsx  FocusOnPathChange.tsx  Footer.tsx  NavBar.tsx  Navigation.tsx  PWA.tsx  Sidebar.tsx  Toaster.tsx  async-error-boundary.tsx  error-boundary.tsx  login-form.tsx  sign-up-form.tsx
docs/: README.md  compliance.md  deploy.md  mathan-strategic-blueprint.md  mvp-implementation-blueprint.md  navigation-audit.md  navigation-map.md  qa-nav-checklist.md
hooks/: usePipelineProgress.ts
lib/: anthropic.ts  env.client.ts  env.server.ts  env.ts  logger.ts  rate-limit.ts  (+1 more)
(+221 files in other folders)
